--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -2371,6 +2371,9 @@ mark_as_read = Mark as read
 mark_as_unread = Mark as unread
 mark_all_as_read = Mark all as read
 
+[pushnotification]
+test_message = This is a test notification from Gitea. If you're reading this notifications are working. Hooray!
+
 [gpg]
 default_key=Signed with default key
 error.extract_sign = Failed to extract signature
