--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -2375,6 +2375,8 @@ mark_all_as_read = Mark all as read
 test_message = This is a test notification from Gitea. If you're reading this notifications are working. Hooray!
 activity_issue = New activity on issue #%d - "%s". Click to view.
 activity_pr = New activity on pull request #%d - "%s". Click to view.
+opt_in = Enable push notifications
+opt_out = Disable push notifications
 
 [gpg]
 default_key=Signed with default key
